--- a/index.html
+++ b/index.html
@@ -1,1 +1,10 @@
-
+<!DOCTYPE html>
+<html>
+    <head>
+        <title>Estilo en linea</title>
+    </head>
+    <body>
+        <h1 style="color: rgb(5, 5, 244);font-size: 14px;">Esto es un titulo con estilo en linea</h1>
+        <p style="color: rgb(189, 3, 3);font-family: Arial, Helvetica, sans-serif;">Esto es un parrafo con estilo en linea</p>
+    </body>
+</html>
