--- a/index.html
+++ b/index.html
@@ -3,8 +3,18 @@
     <head>
         <title>Estilo en linea</title>
     </head>
+    <style>
+        h1{
+            color: rgb(5, 220, 148);
+            font-size: 30px;
+        }
+        p{
+            color: rgb(198, 2, 2);
+            font-family: Georgia, 'Times New Roman', Times, serif;
+        }
+    </style>
     <body>
-        <h1 style="color: rgb(5, 5, 244);font-size: 14px;">Esto es un titulo con estilo en linea</h1>
-        <p style="color: rgb(189, 3, 3);font-family: Arial, Helvetica, sans-serif;">Esto es un parrafo con estilo en linea</p>
+        <h1>Esto es un titulo con estilo en linea</h1>
+        <p>Esto es un parrafo con estilo en linea</p>
     </body>
 </html>
