--- a/index.html
+++ b/index.html
@@ -2,19 +2,12 @@
 <html>
     <head>
         <title>Estilo en linea</title>
+        <link rel="stylesheet" href="estilo.css" />
     </head>
-    <style>
-        h1{
-            color: rgb(5, 220, 148);
-            font-size: 30px;
-        }
-        p{
-            color: rgb(198, 2, 2);
-            font-family: Georgia, 'Times New Roman', Times, serif;
-        }
-    </style>
+    
     <body>
         <h1>Esto es un titulo con estilo en linea</h1>
         <p>Esto es un parrafo con estilo en linea</p>
     </body>
+
 </html>
